base/src/test/resources/failure/syntax/issue350-qualified-id.aya.txt
In file $FILE:1:17 ->

  1 | def x : Set => \ A::B => x
                       ^--^

Error: Parser error: parameter name `A::B` should not be qualified
Parsing interrupted due to error(s).
What are you doing?
